--- a/src/assets/stylesheets/media-browser.scss
+++ b/src/assets/stylesheets/media-browser.scss
@@ -331,12 +331,23 @@
           width: 100%;
           display: block;
 
+          &:focus, &:active { outline: none; }
+
           img {
             background-color: $light-grey;
             border-radius: 12px;
             width: 100%;
             height: 100%;
             filter: brightness(1.1) contrast(1.1);
+            border: 3px solid $light-grey;
+          }
+        }
+      }
+
+      :local(.highlighted) {
+        :local(.image) {
+          img {
+            border-color: $action-color;
           }
         }
       }
