--- a/src/assets/stylesheets/avatar-selector.scss
+++ b/src/assets/stylesheets/avatar-selector.scss
@@ -1,14 +1,14 @@
 @import 'shared';
 
 :local(.avatar-selector-container) {
-  overflow-y: hidden;
+  overflow-y: scroll;
 
   @media (min-width: 1200px) {
     display: grid;
     grid-template: 100% / 80% 20%;
   }
 
-  div {
+  > div {
     margin: 0 0.5em;
   }
 
